--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@astrojs/rss": "^4.0.6",
         "@astrojs/sitemap": "^3.1.5",
         "@astrojs/tailwind": "^5.1.0",
+        "@fontsource-variable/eb-garamond": "^5.0.19",
+        "@fontsource-variable/noto-sans": "^5.0.5",
         "astro": "^4.10.1",
         "marked": "^12.0.2",
         "tailwindcss": "^3.4.4"
