--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@astrojs/tailwind": "^5.1.0",
         "@fontsource-variable/eb-garamond": "^5.0.19",
         "@fontsource-variable/noto-sans": "^5.0.5",
+        "@netlify/functions": "^2.8.1",
         "astro": "^4.10.1",
         "marked": "^12.0.2",
         "tailwindcss": "^3.4.4"
